--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
             </form>
             <p class="bottom">
                 Already have an account?
-                <a class="bottom" href="{{ url_for('login') }}">Sign In here</a>
+                <a class="bottom" href="/login">Sign In here</a>
             </p>
         </div>
     </div>
