--- a/register.html
+++ b/register.html
@@ -11,17 +11,20 @@
             <div class="header">
                 <h1 class="word">Register</h1>
             </div>
+
+            {% with messages = get_flashed_messages() %}
+              {% if messages %}
+                <div class="msg">{{ messages[0] }}</div>
+              {% endif %}
+            {% endwith %}
+
             <form action="{{ url_for('register') }}" method="post">
-                <div class="msg">{{ msg }}</div>
                 <input id="username" name="username" type="text" placeholder="Enter Your Username" class="textbox" /><br><br>
                 <input id="password" name="password" type="password" placeholder="Enter Your Password" class="textbox" /><br><br>
                 <input id="email" name="email" type="email" placeholder="Enter Your Email ID" class="textbox" /><br><br>
                 <input type="submit" class="btn" value="Sign Up"><br>
             </form>
-            <p class="bottom">
-                Already have an account?
-                <a class="bottom" href="/login">Sign In here</a>
-            </p>
+            <p class="bottom">Already have an account? <a class="bottom" href="/login">Sign In here</a></p>
         </div>
     </div>
 </body>
